Git_WGBH_QC/src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>AccountCategory_Value__c</fullName>
        <label>Account Category Value</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountCategory__c</fullName>
        <description>TA Account Category</description>
        <label>Account Category</label>
        <picklist>
            <picklistValues>
                <fullName>Affiliate Groups</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Foundation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Government</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Individual/Family</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Profit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Account_Household__c</fullName>
        <label>Household</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Manager__c</fullName>
        <description>Account Manager who are responsible for contact and household relationships for Annual Giving/Foundations/Planned Giving/Underwriting/Trustee &amp; Overseer Relations/Events/Development</description>
        <inlineHelpText>Account Manager who are responsible for contact and household relationships for Annual Giving/Foundations/Planned Giving/Underwriting/Trustee &amp; Overseer Relations/Events/Development</inlineHelpText>
        <label>Account Manager</label>
        <picklist>
            <picklistValues>
                <fullName>Davi Axinn Levine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Abby Ballou</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jessica Connolly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kaja Fickes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ellen Frank</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kathleen McCarthy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jeanmarie Roberts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Susanne Salerno</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vanya Tulenko</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Win Lenihan</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Account_Preferred_Address__c</fullName>
        <formula>HYPERLINK( &apos;/&apos; +  Account.Preferred_Address__r.Id ,  Account.Preferred_Address__r.Name   )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Preferred Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Acquired_Date__c</fullName>
        <label>Acquired Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <referenceTo>Address__c</referenceTo>
        <relationshipLabel>Contacts (Address)</relationshipLabel>
        <relationshipName>Contacts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Age__c</fullName>
        <formula>FLOOR((TODAY()-Birthdate)/365.2425)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AlternateEmail__c</fullName>
        <label>Alternate Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Annual_Giving_Level__c</fullName>
        <label>Annual Giving Level</label>
        <picklist>
            <picklistValues>
                <fullName>WGBH Membership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WGBY Membership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cape &amp; Islands Membership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WGBH Leadership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WGBY Leadership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cape &amp; Islands Leadership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WGBH Ralph Lowell Society</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WGBY Murrow Society</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cape &amp; Islands Society</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Assistant_Email__c</fullName>
        <inlineHelpText>Enter the email for the Assistant to the Contact.</inlineHelpText>
        <label>Assistant Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Birth_Day__c</fullName>
        <description>Day of the Month the Contact was born.</description>
        <inlineHelpText>Day of the Month the Contact was born. Format using two digits (example 01 for the first day of the month).</inlineHelpText>
        <label>Birth Day</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Birth_Month__c</fullName>
        <description>Month of the Birth for the Contact</description>
        <inlineHelpText>Month of Birth for the Contact. Format using two digits (example 01 for Jan or 02 for Feb).</inlineHelpText>
        <label>Birth Month</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Birth_Year__c</fullName>
        <description>Year of birth of the Contact in YYYY format (1990).</description>
        <inlineHelpText>Year of birth of the Contact in YYYY format (1990).</inlineHelpText>
        <label>Birth Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brief_Name__c</fullName>
        <label>Brief Name</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Child__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The check box indicates that this is a child in the household.</description>
        <inlineHelpText>The check box indicates that this is a child in the household.</inlineHelpText>
        <label>Child</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_Status__c</fullName>
        <description>Current Status of the Contact.</description>
        <inlineHelpText>Current Status of the Contact.</inlineHelpText>
        <label>Contact Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Prospect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deceased</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grace</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lapsed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Duplicate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Archive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contact_Type__c</fullName>
        <description>Type of Contact.</description>
        <inlineHelpText>Type of Contact.</inlineHelpText>
        <label>Contact Type</label>
        <picklist>
            <picklistValues>
                <fullName>Primary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Household Member</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Child</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Organization Member</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Attorney</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Beneficiary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Executor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agency Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Discount Partner Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Kind Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Executive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advertising</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Kind</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Major Gift Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mbr Disc Organization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MMI Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sponsorship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wine Donations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Estate</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contact_Web_Site__c</fullName>
        <inlineHelpText>Web site for the Contact.</inlineHelpText>
        <label>Contact Web Site</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Description__c</fullName>
        <formula>IF( Data_Quality_Score__c =100,&quot;All Contact Details Captured&quot;, &quot;Missing: &quot;&amp;IF( LEN( Phone ) = 0, &quot;Phone, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF(LEN( Email) = 0, &quot;Email, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN( MailingStreet ) = 0, &quot;Complete Address, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(Title) = 0, &quot;Job Title, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( ISPICKVAL( Salutation,&quot;&quot;), &quot;Salutation&quot;,&quot;&quot;))</formula>
        <label>Data Quality Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Score__c</fullName>
        <formula>IF( LEN( Phone) = 0, 0,20) + IF( LEN( Email) = 0, 0,20) + IF( LEN(MailingStreet) = 0, 0,20) + IF( LEN(Title) = 0, 0,20) + IF( ISPICKVAL(Salutation,&quot;&quot;), 0,20)</formula>
        <label>Data Quality Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Disability__c</fullName>
        <label>Disability</label>
        <picklist>
            <picklistValues>
                <fullName>Blind</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deaf</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Physically Challenged</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Do_Not_Mail__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Please do not mail anything to this contact</inlineHelpText>
        <label>Do Not Mail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email_Address_for_Major_Gift_Use__c</fullName>
        <description>Email address for Major Gift officer use only, not to be used by Marketing or Development Groups</description>
        <inlineHelpText>Email address for Major Gift officer use only, not to be used by Marketing or Development Groups</inlineHelpText>
        <label>Email Address for Major Gift Use</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Ethnicity__c</fullName>
        <label>Ethnicity</label>
        <picklist>
            <picklistValues>
                <fullName>African</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>American</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cambodian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canadian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Caribbean Islander</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Caucasian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chinese</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cuban</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Egyptian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>French Canadian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Haitain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Irish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Italian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Japanese</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jewish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Korean</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Latin American</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mexican</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mixed Heritage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Native American</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Portuguese</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Puerto Rican</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vietnamese</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Formula_HouseholdMailingAddress__c</fullName>
        <formula>Account_Household__r.Formula_MailingAddress__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Household Mailing Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Formula_HouseholdPhone__c</fullName>
        <formula>Account_Household__r.Household_Phone__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HTML_Enabled_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <label>HTML Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HomeEmail__c</fullName>
        <label>Home Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Home_Address__c</fullName>
        <formula>if(
  ISPICKVAL(Primary_Address_Type__c,&quot;Home&quot;),
  if(LEN(MailingStreet)&gt;0, MailingStreet &amp; &quot;, &quot; , &quot;&quot; ) &amp; 
  if(LEN(MailingCity)&gt;0, MailingCity &amp; &quot;, &quot; , &quot;&quot; )&amp; 
  if(LEN(MailingState)&gt;0, MailingState &amp; &quot; &quot; , &quot;&quot; )&amp; 
  if(LEN(MailingPostalCode)&gt;0, MailingPostalCode,&quot;&quot;) &amp; 
  If(LEN( MailingCountry ) &gt;0, &quot;, &quot; &amp;MailingCountry,&quot;&quot;)
,
if(ISPICKVAL(Secondary_Address_Type__c,&quot;Home&quot;),
  if(LEN(OtherStreet)&gt;0, OtherStreet &amp; &quot;, &quot; , &quot;&quot; ) &amp; 
  if(LEN(OtherCity)&gt;0, OtherCity &amp; &quot;, &quot; , &quot;&quot; )&amp; 
  if(LEN(OtherState)&gt;0, OtherState &amp; &quot; &quot; , &quot;&quot; )&amp; 
  if(LEN(OtherPostalCode)&gt;0, OtherPostalCode,&quot;&quot;) &amp; 
  If(LEN(OtherCountry ) &gt;0, &quot;, &quot; &amp; OtherCountry,&quot;&quot;)
  ,&quot;&quot;
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Home Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Household_Account_Manager__c</fullName>
        <description>The contact&apos;s household&apos;s account manager</description>
        <formula>Account.Account_Manager__r.FirstName &amp;&quot; &quot;&amp; Account.Account_Manager__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Major Gifts Account Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Household_Email__c</fullName>
        <label>Household Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Household_Old__c</fullName>
        <label>Household</label>
        <referenceTo>Household__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Internal_Rating__c</fullName>
        <label>Internal Rating</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Languages__c</fullName>
        <label>Languages - DEPRECATED</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Donation_Date__c</fullName>
        <description>This field is only used with the one-to-one Organization to Contact model.</description>
        <formula>if( Account.One2OneContact__c = Id ,
Account.LastDonationDate__c,
null
)</formula>
        <label>Last Transaction Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lead_Source_Most_Recent__c</fullName>
        <description>A lead could have an existing lead source - this field shows the most recent source</description>
        <inlineHelpText>When a lead is created it will have a lead source but may not be qualified and may not be ready to donate.  If the lead comes back to the web site or responds to another marketing piece this field will show the most recent lead source.</inlineHelpText>
        <label>Lead Source - Most Recent</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <label>Level - DEPRECATED</label>
        <picklist>
            <picklistValues>
                <fullName>Secondary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tertiary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Primary</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lifetime_Giving_History_Amount__c</fullName>
        <description>This field is only used with the one-to-one Organization to Contact model.</description>
        <formula>IF( Account.One2OneContact__c = Id ,
Account.LifetimeDonationHistory_Amount__c,
null
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lifetime Transaction Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Marketing_Rating__c</fullName>
        <description>Eloqua Marketing Rating for converted Leads</description>
        <inlineHelpText>Read Only for information imported from Eloqua and the WGBH online leads.</inlineHelpText>
        <label>Marketing Rating</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Name_Line2__c</fullName>
        <formula>FirstName  &amp; &quot; &quot; &amp;  LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Name Line2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Online_User__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Used to designate when a Contact is an Online User; e.g.via a website and not Customer Portal or Partner Portal</inlineHelpText>
        <label>Online User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Organization_Type__c</fullName>
        <formula>NULLVALUE(IF( Account.SYSTEM_AccountType__c==&quot;&quot;, TEXT(Account.Type),Account.SYSTEM_AccountType__c),&quot;Organization&quot; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Organization Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Address__c</fullName>
        <formula>if(
  ISPICKVAL(Primary_Address_Type__c,&quot;Other&quot;),
  if(LEN(MailingStreet)&gt;0, MailingStreet &amp; &quot;, &quot; , &quot;&quot; ) &amp; 
  if(LEN(MailingCity)&gt;0, MailingCity &amp; &quot;, &quot; , &quot;&quot; )&amp; 
  if(LEN(MailingState)&gt;0, MailingState &amp; &quot; &quot; , &quot;&quot; )&amp; 
  if(LEN(MailingPostalCode)&gt;0, MailingPostalCode,&quot;&quot;) &amp; 
  If(LEN( MailingCountry ) &gt;0, &quot;, &quot; &amp;MailingCountry,&quot;&quot;)
,
if(ISPICKVAL(Secondary_Address_Type__c,&quot;Other&quot;),
  if(LEN(OtherStreet)&gt;0, OtherStreet &amp; &quot;, &quot; , &quot;&quot; ) &amp; 
  if(LEN(OtherCity)&gt;0, OtherCity &amp; &quot;, &quot; , &quot;&quot; )&amp; 
  if(LEN(OtherState)&gt;0, OtherState &amp; &quot; &quot; , &quot;&quot; )&amp; 
  if(LEN(OtherPostalCode)&gt;0, OtherPostalCode,&quot;&quot;) &amp; 
  If(LEN(OtherCountry ) &gt;0, &quot;, &quot; &amp; OtherCountry,&quot;&quot;)
  ,&quot;&quot;
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Other Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <label>Password</label>
        <length>10</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Political__c</fullName>
        <label>Political</label>
        <picklist>
            <picklistValues>
                <fullName>Democrat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Green Party</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Independent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Republican</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unaffiliated</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PreferredPhone__c</fullName>
        <label>Preferred Phone</label>
        <picklist>
            <picklistValues>
                <fullName>Home</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Household</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Work</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Preferred_Address__c</fullName>
        <label>Preferred Address</label>
        <referenceTo>Address__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Preferred_Email__c</fullName>
        <label>Preferred Email</label>
        <picklist>
            <picklistValues>
                <fullName>Home</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Household</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Work</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alternate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Personal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Default Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assistant</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Primary_Address_Type__c</fullName>
        <label>Primary Address Type</label>
        <picklist>
            <picklistValues>
                <fullName>Home</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Work</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Primary_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Private__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Private</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Prospect_Research_Report__c</fullName>
        <label>Prospect Research Report</label>
        <referenceTo>Prospect_Research_Reports__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Religion__c</fullName>
        <label>Religion</label>
        <picklist>
            <picklistValues>
                <fullName>Catholic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jewish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Muslim</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Protestant</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SFDC_CONTACT_ID__c</fullName>
        <displayFormat>C{000000000}</displayFormat>
        <externalId>true</externalId>
        <label>Contact ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>STS__c</fullName>
        <description>TA Status</description>
        <inlineHelpText>See Contact Status with real values that are mapped from these TA values</inlineHelpText>
        <label>TA Status</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Salutation_Type__c</fullName>
        <description>Annual Report List, Board Affiliation, John Abbott signature</description>
        <label>Salutation Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_Address_Type__c</fullName>
        <label>Secondary Address Type</label>
        <picklist>
            <picklistValues>
                <fullName>Home</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Work</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Household</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SystemAccountProcessor__c</fullName>
        <label>_SYSTEM: ACCOUNT PROCESSOR</label>
        <picklist>
            <picklistValues>
                <fullName>One-to-One</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Individual</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SystemHouseholdProcessor__c</fullName>
        <description>Used to set if Households should get created for all Contacts, or just those which are connected to an individual account</description>
        <label>_SYSTEM: HOUSEHOLD PROCESSOR</label>
        <picklist>
            <picklistValues>
                <fullName>All Individual Contacts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>All New or Edited Contacts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Contacts</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SystemIsIndividual__c</fullName>
        <defaultValue>false</defaultValue>
        <label>_SYSTEM: IsIndividual - DEPRECATED</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TaContactId__c</fullName>
        <description>TA Contact Id</description>
        <label>TA Contact Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Termination_Date__c</fullName>
        <label>Termination Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Type_of_Account__c</fullName>
        <formula>IF(Account.SYSTEMIsIndividual__c,&quot;Individual&quot;,&quot;Organization&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Shows the type of Account this Contact is connected to.</inlineHelpText>
        <label>Type of Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WorkEmail__c</fullName>
        <label>Work Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>WorkPhone__c</fullName>
        <label>Work Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Work_Address__c</fullName>
        <formula>if(
  ISPICKVAL(Primary_Address_Type__c,&quot;Work&quot;),
  if(LEN(MailingStreet)&gt;0, MailingStreet &amp; &quot;, &quot; , &quot;&quot; ) &amp; 
  if(LEN(MailingCity)&gt;0, MailingCity &amp; &quot;, &quot; , &quot;&quot; )&amp; 
  if(LEN(MailingState)&gt;0, MailingState &amp; &quot; &quot; , &quot;&quot; )&amp; 
  if(LEN(MailingPostalCode)&gt;0, MailingPostalCode,&quot;&quot;) &amp; 
  If(LEN( MailingCountry ) &gt;0, &quot;, &quot; &amp;MailingCountry,&quot;&quot;)
,
if(ISPICKVAL(Secondary_Address_Type__c,&quot;Work&quot;),
  if(LEN(OtherStreet)&gt;0, OtherStreet &amp; &quot;, &quot; , &quot;&quot; ) &amp; 
  if(LEN(OtherCity)&gt;0, OtherCity &amp; &quot;, &quot; , &quot;&quot; )&amp; 
  if(LEN(OtherState)&gt;0, OtherState &amp; &quot; &quot; , &quot;&quot; )&amp; 
  if(LEN(OtherPostalCode)&gt;0, OtherPostalCode,&quot;&quot;) &amp; 
  If(LEN(OtherCountry ) &gt;0, &quot;, &quot; &amp; OtherCountry,&quot;&quot;)
  ,&quot;&quot; 
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Work Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>affiliation__c</fullName>
        <description>Affiliation</description>
        <label>Affiliation</label>
        <length>8</length>
        <type>Text</type>
    </fields>
</CustomObject>